Conclusions are done as well. Project is finished and will be submitted for first review.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -4923,6 +4923,56 @@
     "\n",
     "We chose a significance level of 0.05 because it is a common choice in statistical hypothesis testing and provides a balance between Type I and Type II errors. It's a widely accepted convention in many fields of research."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Platform Analysis:**\n",
+    "The PlayStation 2 (PS2) emerged as the top-selling platform, followed by the Xbox 360, PlayStation 3 (PS3), and Wii. These platforms enjoyed considerable success over their lifespans, with varying patterns of sales growth and decline.\n",
+    "Notably, the PS3 maintained consistent sales over several years, while the Wii experienced a sharp decline after its initial popularity peak.\n",
+    "\n",
+    "**Temporal Trends:**\n",
+    "The video game industry has seen significant growth since the early 2000s, with a notable surge in releases and sales after 2010.\n",
+    "Sales trends suggest cyclical patterns, with periods of growth followed by declines and subsequent rebounds. The data also indicates a recent decline in sales, possibly due to changing consumer preferences or market saturation.\n",
+    "\n",
+    "**Genre Preferences:**\n",
+    "Action, sports, and shooter genres emerged as the most profitable, reflecting a preference for mainstream and easily consumable content among gamers.\n",
+    "Niche genres such as strategy and puzzle games accounted for lower sales, potentially due to their limited appeal to a broader audience.\n",
+    "\n",
+    "**Regional Variations:**\n",
+    "Regional preferences differ significantly, with notable variations in platform popularity and genre preferences.\n",
+    "While the PlayStation and Xbox platforms dominate North America and Europe, Japan exhibits a preference for Nintendo consoles such as the 3DS.\n",
+    "Differences in ESRB ratings also influence sales trends, with variations observed in regional markets.\n",
+    "\n",
+    "**Effect of Reviews on Sales:**\n",
+    "Analysis of user and critic reviews suggests a modest correlation between review scores and sales, with critic scores showing slightly stronger correlations.\n",
+    "However, reviews alone may not fully predict game sales, as other factors such as marketing, genre, and platform exclusivity also play significant roles.\n",
+    "\n",
+    "**Hypothesis Testing:**\n",
+    "The hypothesis testing comparing average user ratings between Xbox One and PC platforms revealed no significant difference in ratings, suggesting similar user satisfaction levels for both platforms.\n",
+    "\n",
+    "**Implications for Marketing and Strategy:**\n",
+    "Game developers and publishers can leverage insights from platform and genre preferences to tailor marketing strategies and game development efforts.\n",
+    "Regional variations highlight the importance of localized marketing campaigns and game localization to maximize sales potential in different markets.\n",
+    "Continued analysis of user reviews and market trends can inform strategic decisions regarding platform exclusivity, genre selection, and target demographics.\n",
+    "\n",
+    "**Future Directions:**\n",
+    "Further research could explore advanced analytical techniques, such as machine learning models, to predict game sales and identify factors influencing success.\n",
+    "Longitudinal studies tracking industry trends over time could provide valuable insights into evolving consumer preferences and market dynamics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
